# linuxvision

./: CONTRIBUTING.md  README.md  config_editor.py  config_roles.yaml  pyproject.toml  rbac.py  requirements.txt
.github/workflows/: dbtest.yml~  test.yml
modules/: config_loader.py  manpage_explorer.py
plugins/: __init__.py
plugins/validators/: nginx_validator.py
src/: config_editor.py  gui.py  linuxvision-GUI.py  linuxvision_gui.py  main.py  rbac.py  sandbox.py
src/modules/: config_loader.py  manpage_explorer.py
tests/: test_config_editor.py  test_example.py  test_nginx_validator.py  test_parsing_and_plugins.py  test_rbac.py
